--- a/tests/FluentValidationTest.Tests/FluentValidationTest.Tests.csproj
+++ b/tests/FluentValidationTest.Tests/FluentValidationTest.Tests.csproj
@@ -15,9 +15,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="coverlet.msbuild" Version="3.1.0">
+	  <PrivateAssets>all</PrivateAssets>
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	</PackageReference>
     <PackageReference Include="FakeItEasy" Version="7.2.0" />
     <PackageReference Include="FluentAssertions" Version="6.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.0.0" />
+	<PackageReference Include="ReportGenerator" Version="5.0.0" />	  
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -31,6 +36,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\FluentValidationTest\FluentValidationTest.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="3.11.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
