Package bump etc.

--- a/src/FluentValidationTest/FluentValidationTest.csproj
+++ b/src/FluentValidationTest/FluentValidationTest.csproj
@@ -6,13 +6,14 @@
   
   <ItemGroup>
     <PackageReference Include="FluentValidation.AspNetCore" Version="11.1.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-	<PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.1.0">
-		<PrivateAssets>all</PrivateAssets>
-		<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-	</PackageReference>
+    <Content Remove="appsettings.Development.json" Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'" />
   </ItemGroup>
 
 </Project>
