--- a/tests/FluentValidationTest.Tests/FluentValidationTest.Tests.csproj
+++ b/tests/FluentValidationTest.Tests/FluentValidationTest.Tests.csproj
@@ -13,6 +13,10 @@
 	</PackageReference>
     <PackageReference Include="FakeItEasy" Version="7.3.1" />
     <PackageReference Include="FluentAssertions" Version="6.7.0" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.2.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.2.0" />
 	<PackageReference Include="ReportGenerator" Version="5.1.9" />	  
     <PackageReference Include="xunit" Version="2.4.1" />
@@ -28,13 +32,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\FluentValidationTest\FluentValidationTest.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Update="Microsoft.CodeAnalysis.CSharp.CodeStyle" Version="4.1.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
 
 </Project>
