Updates and AccelerateBuildsInVisualStudio tweak

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -1,6 +1,10 @@
 <Project>
 
   <PropertyGroup>
+    <AccelerateBuildsInVisualStudio>true</AccelerateBuildsInVisualStudio>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
   </PropertyGroup>
 
